--- a/package.json
+++ b/package.json
@@ -8,10 +8,11 @@
   "version": "1.0.0",
   "main": "index.js",
   "type": "module",
-  "devDependencies": {},
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+  "devDependencies": {
+    "@playwright/test": "^1.46.1",
+    "@types/node": "^22.5.2"
   },
+  "scripts": {},
   "keywords": [],
   "author": "",
   "license": "ISC",
